# peer-status

./: .gitignore  125.56da0776.iframe.bundle.js  190.af9afa82.iframe.bundle.js  2-2-coordinator-mdx.fccab0f5.iframe.bundle.js  289.efb16eec.iframe.bundle.js  3-1-frontend-setup-mdx.4390da96.iframe.bundle.js  3-1-frontend-setup-mdx.85a67285.iframe.bundle.js  403.3648d634.iframe.bundle.js  433.22f3039b.iframe.bundle.js  446.6fceca18.iframe.bundle.js  53.045e5cac.iframe.bundle.js.map  53.3528ffcd.iframe.bundle.js  53.3528ffcd.iframe.bundle.js.map  587.96b2b79a.iframe.bundle.js  611.d5c31096.iframe.bundle.js  632.4ff281d0.iframe.bundle.js  632.4ff281d0.iframe.bundle.js.LICENSE.txt  632.4ff281d0.iframe.bundle.js.map  680.6c35b0f4.iframe.bundle.js.LICENSE.txt  680.6c35b0f4.iframe.bundle.js.map  848.fa4cddbd.iframe.bundle.js  876.6a4eee88.iframe.bundle.js  910.3141cd36.iframe.bundle.js  910.3141cd36.iframe.bundle.js.map  98.44ffc2db.iframe.bundle.js  Cargo.toml  README.md  avatar-with-status-stories.2fa1d03c.iframe.bundle.js  avatar-with-status-stories.2fa1d03c.iframe.bundle.js.map  avatar-with-status-stories.3cdcd81f.iframe.bundle.js  avatar-with-status-stories.3cdcd81f.iframe.bundle.js.map  custom-elements.json  dev-setup.md  iframe.html  index.html  list-agents-by-status-stories.778dfc83.iframe.bundle.js  list-agents-by-status-stories.778dfc83.iframe.bundle.js.map  main.93053fe7.iframe.bundle.js  package-lock.json  package.json  (+9 more)
.github/workflows/: main.yml
crates/coordinator_zomes/peer_status/: Cargo.toml  README.md
crates/coordinator_zomes/peer_status/src/: lib.rs
crates/coordinator_zomes/profiles/: Cargo.toml
crates/integrity_zomes/peer_status/: Cargo.toml
crates/integrity_zomes/profiles/: Cargo.toml
crates/profiles/: Cargo.toml
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/zome/: Cargo.toml  README.md
crates/zome/src/: lib.rs
docs/: index.md
docs/_assets/: webmanifest.json
docs/_data/: site.cjs
docs/guides/: index.md
docs/guides/backend/: types.md  zome.md
docs/guides/frontend/: elements.md  status-service.md  status-store.md
nix/: sources.json
sb-addons/essentials-backgrounds-3/: manager-bundle.mjs.map
src/: config.ts  context.ts  mocks.ts  peer-status-service.ts  peer-status-store.ts
src/definitions/: avatar-with-status.ts  list-agents-by-status.ts
src/elements/: peer-status-context.ts  peer-status.ts
stories/: 1-introduction.mdx  2.1-backend-setup.mdx  3.1-frontend-setup.mdx  3.2-peer-status-store.mdx  avatar-with-status.stories.js  list-agents-by-status.stories.js  peer-status.stories.js
storybook-static/: 1-introduction-mdx.5fddf2c6.iframe.bundle.js  2-1-backend-setup-mdx.f4a2463a.iframe.bundle.js  289.efb16eec.iframe.bundle.js.map  3-2-peer-status-store-mdx.0f0eecb7.iframe.bundle.js  333.83495f2e.iframe.bundle.js  48.7f15fff6.iframe.bundle.js  48.7f15fff6.iframe.bundle.js.map  53.045e5cac.iframe.bundle.js  680.6c35b0f4.iframe.bundle.js  724.9c8e5400.iframe.bundle.js  724.9c8e5400.iframe.bundle.js.map  923.d537cd79.iframe.bundle.js  971.8751f756.iframe.bundle.js  index.json  list-agents-by-status-stories.362b09d3.iframe.bundle.js  list-agents-by-status-stories.362b09d3.iframe.bundle.js.map  main.ef62349d.iframe.bundle.js  runtime~main.98d3eb1d.iframe.bundle.js
test/: elements.test.js
test/mocks/: index.js  status.mock.js
tests/: package.json
tests/src/: index.ts
ui/: README.md  custom-elements.json  package.json  rollup.config.js  tsconfig.json
ui/demo/: index.html
ui/src/: config.ts  context.ts  index.ts  mocks.ts  peer-status-client.ts  peer-status-service.ts  peer-status-store.ts  status-service.ts  status-store.ts  types.ts
ui/src/definitions/: agent-status.ts  (+2 more)
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
(+10 files in other folders)
