[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "Peer Status zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/peer-status"
edition = "2021"
homepage = "https://docs.rs/hc_zome_peer_status"
license = "MIT"
name = "hc_zome_peer_status_coordinator"
repository = "https://github.com/holochain-open-dev/peer-status"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_peer_status_coordinator"

[dependencies]

hdk = { workspace = true }
serde = { workspace = true }

hc_zome_peer_status_integrity = { path= "../../integrity_zomes/peer_status"}

