[package]
edition = "2021"
name = "hc_zome_profiles_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_coordinator"

[dependencies]

hc_zome_profiles_integrity = { path = "../../integrity_zomes/profiles" }
hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", rev = "acd833c37ecfb9fb96b3b3e1f8d0489a77928a43", package = "hc_zome_profiles_coordinator"}