[package]
edition = "2021"
name = "hc_zome_profiles_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_coordinator"

[dependencies]

hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", rev = "540d63d147db6f274d507938c3ea8655560a0bf9" }
hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles", rev = "540d63d147db6f274d507938c3ea8655560a0bf9" }
