[package]
edition = "2021"
name = "hc_zome_profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", rev = "b680839a9cd55f994f96a957b63a78b5fa281622" }
